--- a/LoE-Launcher/Properties/Resources.resx
+++ b/LoE-Launcher/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="CelestiaMediumRedux_Name" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CelestiaMediumRedux Name.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="LoEIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\LoEIcon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="LoE_Logo_Vector" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\LoE_Logo_Vector.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
